--- a/app/globals.css
+++ b/app/globals.css
@@ -1,99 +1,99 @@
 @import "tailwindcss";
 
 :root {
-  --background: hsl(0 0% 98.8235%);
-  --foreground: hsl(0 0% 9.0196%);
-  --card: hsl(0 0% 98.8235%);
-  --card-foreground: hsl(0 0% 9.0196%);
-  --popover: hsl(0 0% 98.8235%);
-  --popover-foreground: hsl(0 0% 32.1569%);
-  --primary: hsl(151.3274 66.8639% 66.8627%);
-  --primary-foreground: hsl(153.3333 13.0435% 13.5294%);
-  --secondary: hsl(0 0% 99.2157%);
-  --secondary-foreground: hsl(0 0% 9.0196%);
-  --muted: hsl(0 0% 92.9412%);
-  --muted-foreground: hsl(0 0% 12.5490%);
-  --accent: hsl(0 0% 92.9412%);
-  --accent-foreground: hsl(0 0% 12.5490%);
-  --destructive: hsl(9.8901 81.9820% 43.5294%);
-  --destructive-foreground: hsl(0 100% 99.4118%);
-  --border: hsl(0 0% 87.4510%);
-  --input: hsl(0 0% 96.4706%);
-  --ring: hsl(151.3274 66.8639% 66.8627%);
-  --chart-1: hsl(151.3274 66.8639% 66.8627%);
-  --chart-2: hsl(217.2193 91.2195% 59.8039%);
-  --chart-3: hsl(258.3117 89.5349% 66.2745%);
-  --chart-4: hsl(37.6923 92.1260% 50.1961%);
-  --chart-5: hsl(160.1183 84.0796% 39.4118%);
-  --sidebar: hsl(0 0% 98.8235%);
-  --sidebar-foreground: hsl(0 0% 43.9216%);
-  --sidebar-primary: hsl(151.3274 66.8639% 66.8627%);
-  --sidebar-primary-foreground: hsl(153.3333 13.0435% 13.5294%);
-  --sidebar-accent: hsl(0 0% 92.9412%);
-  --sidebar-accent-foreground: hsl(0 0% 12.5490%);
-  --sidebar-border: hsl(0 0% 87.4510%);
-  --sidebar-ring: hsl(151.3274 66.8639% 66.8627%);
-  --font-sans: Outfit, sans-serif;
-  --font-serif: ui-serif, Georgia, Cambria, "Times New Roman", Times, serif;
-  --font-mono: monospace;
-  --radius: 0.5rem;
-  --shadow-2xs: 0px 1px 3px 0px hsl(0 0% 0% / 0.09);
-  --shadow-xs: 0px 1px 3px 0px hsl(0 0% 0% / 0.09);
-  --shadow-sm: 0px 1px 3px 0px hsl(0 0% 0% / 0.17), 0px 1px 2px -1px hsl(0 0% 0% / 0.17);
-  --shadow: 0px 1px 3px 0px hsl(0 0% 0% / 0.17), 0px 1px 2px -1px hsl(0 0% 0% / 0.17);
-  --shadow-md: 0px 1px 3px 0px hsl(0 0% 0% / 0.17), 0px 2px 4px -1px hsl(0 0% 0% / 0.17);
-  --shadow-lg: 0px 1px 3px 0px hsl(0 0% 0% / 0.17), 0px 4px 6px -1px hsl(0 0% 0% / 0.17);
-  --shadow-xl: 0px 1px 3px 0px hsl(0 0% 0% / 0.17), 0px 8px 10px -1px hsl(0 0% 0% / 0.17);
-  --shadow-2xl: 0px 1px 3px 0px hsl(0 0% 0% / 0.43);
-  --tracking-normal: 0.025em;
+  --background: hsl(0 0% 97.6471%);
+  --foreground: hsl(0 0% 22.7451%);
+  --card: hsl(0 0% 100%);
+  --card-foreground: hsl(0 0% 22.7451%);
+  --popover: hsl(0 0% 100%);
+  --popover-foreground: hsl(0 0% 22.7451%);
+  --primary: hsl(0 0% 37.6471%);
+  --primary-foreground: hsl(0 0% 94.1176%);
+  --secondary: hsl(0 0% 87.0588%);
+  --secondary-foreground: hsl(0 0% 22.7451%);
+  --muted: hsl(0 0% 89.0196%);
+  --muted-foreground: hsl(0 0% 31.3725%);
+  --accent: hsl(47.4419 64.1791% 86.8627%);
+  --accent-foreground: hsl(14.2105 25.6757% 29.0196%);
+  --destructive: hsl(0 41.4894% 63.1373%);
+  --destructive-foreground: hsl(0 0% 100%);
+  --border: hsl(0 0.8696% 45.0980%);
+  --input: hsl(0 0% 100%);
+  --ring: hsl(0 0% 62.7451%);
+  --chart-1: hsl(0 0% 20%);
+  --chart-2: hsl(0 0% 33.3333%);
+  --chart-3: hsl(0 0% 46.6667%);
+  --chart-4: hsl(0 0% 60%);
+  --chart-5: hsl(0 0% 73.3333%);
+  --sidebar: hsl(0 0% 94.1176%);
+  --sidebar-foreground: hsl(0 0% 22.7451%);
+  --sidebar-primary: hsl(0 0% 37.6471%);
+  --sidebar-primary-foreground: hsl(0 0% 94.1176%);
+  --sidebar-accent: hsl(47.4419 64.1791% 86.8627%);
+  --sidebar-accent-foreground: hsl(14.2105 25.6757% 29.0196%);
+  --sidebar-border: hsl(0 0% 75.2941%);
+  --sidebar-ring: hsl(0 0% 62.7451%);
+  --font-sans: Architects Daughter, sans-serif;
+  --font-serif: "Times New Roman", Times, serif;
+  --font-mono: "Courier New", Courier, monospace;
+  --radius: 0.625rem;
+  --shadow-2xs: 1px 4px 5px 0px hsl(0 0% 0% / 0.01);
+  --shadow-xs: 1px 4px 5px 0px hsl(0 0% 0% / 0.01);
+  --shadow-sm: 1px 4px 5px 0px hsl(0 0% 0% / 0.03), 1px 1px 2px -1px hsl(0 0% 0% / 0.03);
+  --shadow: 1px 4px 5px 0px hsl(0 0% 0% / 0.03), 1px 1px 2px -1px hsl(0 0% 0% / 0.03);
+  --shadow-md: 1px 4px 5px 0px hsl(0 0% 0% / 0.03), 1px 2px 4px -1px hsl(0 0% 0% / 0.03);
+  --shadow-lg: 1px 4px 5px 0px hsl(0 0% 0% / 0.03), 1px 4px 6px -1px hsl(0 0% 0% / 0.03);
+  --shadow-xl: 1px 4px 5px 0px hsl(0 0% 0% / 0.03), 1px 8px 10px -1px hsl(0 0% 0% / 0.03);
+  --shadow-2xl: 1px 4px 5px 0px hsl(0 0% 0% / 0.07);
+  --tracking-normal: 0.5px;
   --spacing: 0.25rem;
 }
 
 .dark {
-  --background: hsl(0 0% 7.0588%);
-  --foreground: hsl(214.2857 31.8182% 91.3725%);
-  --card: hsl(0 0% 9.0196%);
-  --card-foreground: hsl(214.2857 31.8182% 91.3725%);
-  --popover: hsl(0 0% 14.1176%);
-  --popover-foreground: hsl(0 0% 66.2745%);
-  --primary: hsl(154.8980 100.0000% 19.2157%);
-  --primary-foreground: hsl(152.7273 19.2982% 88.8235%);
-  --secondary: hsl(0 0% 14.1176%);
-  --secondary-foreground: hsl(0 0% 98.0392%);
-  --muted: hsl(0 0% 12.1569%);
-  --muted-foreground: hsl(0 0% 63.5294%);
-  --accent: hsl(0 0% 19.2157%);
-  --accent-foreground: hsl(0 0% 98.0392%);
-  --destructive: hsl(6.6667 60.0000% 20.5882%);
-  --destructive-foreground: hsl(12.0000 12.1951% 91.9608%);
-  --border: hsl(0 0% 16.0784%);
-  --input: hsl(0 0% 14.1176%);
-  --ring: hsl(141.8919 69.1589% 58.0392%);
-  --chart-1: hsl(141.8919 69.1589% 58.0392%);
-  --chart-2: hsl(213.1169 93.9024% 67.8431%);
-  --chart-3: hsl(255.1351 91.7355% 76.2745%);
-  --chart-4: hsl(43.2558 96.4126% 56.2745%);
-  --chart-5: hsl(172.4551 66.0079% 50.3922%);
-  --sidebar: hsl(0 0% 7.0588%);
-  --sidebar-foreground: hsl(0 0% 53.7255%);
-  --sidebar-primary: hsl(154.8980 100.0000% 19.2157%);
-  --sidebar-primary-foreground: hsl(152.7273 19.2982% 88.8235%);
-  --sidebar-accent: hsl(0 0% 19.2157%);
-  --sidebar-accent-foreground: hsl(0 0% 98.0392%);
-  --sidebar-border: hsl(0 0% 16.0784%);
-  --sidebar-ring: hsl(141.8919 69.1589% 58.0392%);
-  --font-sans: Outfit, sans-serif;
-  --font-serif: ui-serif, Georgia, Cambria, "Times New Roman", Times, serif;
-  --font-mono: monospace;
-  --radius: 0.5rem;
-  --shadow-2xs: 0px 1px 3px 0px hsl(0 0% 0% / 0.09);
-  --shadow-xs: 0px 1px 3px 0px hsl(0 0% 0% / 0.09);
-  --shadow-sm: 0px 1px 3px 0px hsl(0 0% 0% / 0.17), 0px 1px 2px -1px hsl(0 0% 0% / 0.17);
-  --shadow: 0px 1px 3px 0px hsl(0 0% 0% / 0.17), 0px 1px 2px -1px hsl(0 0% 0% / 0.17);
-  --shadow-md: 0px 1px 3px 0px hsl(0 0% 0% / 0.17), 0px 2px 4px -1px hsl(0 0% 0% / 0.17);
-  --shadow-lg: 0px 1px 3px 0px hsl(0 0% 0% / 0.17), 0px 4px 6px -1px hsl(0 0% 0% / 0.17);
-  --shadow-xl: 0px 1px 3px 0px hsl(0 0% 0% / 0.17), 0px 8px 10px -1px hsl(0 0% 0% / 0.17);
-  --shadow-2xl: 0px 1px 3px 0px hsl(0 0% 0% / 0.43);
+  --background: hsl(0 0% 16.8627%);
+  --foreground: hsl(0 0% 86.2745%);
+  --card: hsl(0 0% 20%);
+  --card-foreground: hsl(0 0% 86.2745%);
+  --popover: hsl(0 0% 20%);
+  --popover-foreground: hsl(0 0% 86.2745%);
+  --primary: hsl(0 0% 69.0196%);
+  --primary-foreground: hsl(0 0% 16.8627%);
+  --secondary: hsl(0 0% 35.2941%);
+  --secondary-foreground: hsl(0 0% 75.2941%);
+  --muted: hsl(0 0% 27.0588%);
+  --muted-foreground: hsl(0 0% 62.7451%);
+  --accent: hsl(0 0% 87.8431%);
+  --accent-foreground: hsl(0 0% 20%);
+  --destructive: hsl(0 35.5932% 76.8627%);
+  --destructive-foreground: hsl(0 0% 16.8627%);
+  --border: hsl(0 0% 30.9804%);
+  --input: hsl(0 0% 20%);
+  --ring: hsl(0 0% 75.2941%);
+  --chart-1: hsl(0 0% 93.7255%);
+  --chart-2: hsl(0 0% 81.5686%);
+  --chart-3: hsl(0 0% 69.0196%);
+  --chart-4: hsl(0 0% 56.4706%);
+  --chart-5: hsl(0 0% 43.9216%);
+  --sidebar: hsl(0 0% 12.9412%);
+  --sidebar-foreground: hsl(0 0% 86.2745%);
+  --sidebar-primary: hsl(0 0% 69.0196%);
+  --sidebar-primary-foreground: hsl(0 0% 12.9412%);
+  --sidebar-accent: hsl(0 0% 87.8431%);
+  --sidebar-accent-foreground: hsl(0 0% 20%);
+  --sidebar-border: hsl(0 0% 30.9804%);
+  --sidebar-ring: hsl(0 0% 75.2941%);
+  --font-sans: Architects Daughter, sans-serif;
+  --font-serif: Georgia, serif;
+  --font-mono: "Fira Code", "Courier New", monospace;
+  --radius: 0.625rem;
+  --shadow-2xs: 1px 4px 5px 0px hsl(0 0% 0% / 0.01);
+  --shadow-xs: 1px 4px 5px 0px hsl(0 0% 0% / 0.01);
+  --shadow-sm: 1px 4px 5px 0px hsl(0 0% 0% / 0.03), 1px 1px 2px -1px hsl(0 0% 0% / 0.03);
+  --shadow: 1px 4px 5px 0px hsl(0 0% 0% / 0.03), 1px 1px 2px -1px hsl(0 0% 0% / 0.03);
+  --shadow-md: 1px 4px 5px 0px hsl(0 0% 0% / 0.03), 1px 2px 4px -1px hsl(0 0% 0% / 0.03);
+  --shadow-lg: 1px 4px 5px 0px hsl(0 0% 0% / 0.03), 1px 4px 6px -1px hsl(0 0% 0% / 0.03);
+  --shadow-xl: 1px 4px 5px 0px hsl(0 0% 0% / 0.03), 1px 8px 10px -1px hsl(0 0% 0% / 0.03);
+  --shadow-2xl: 1px 4px 5px 0px hsl(0 0% 0% / 0.07);
 }
 
 @theme inline {
